Clean-up + layout
Removed unused templates (pages) and changed the layout of the progress bar

--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
@@ -32,7 +32,7 @@
 
         <div id="draw">
             <label>
-                <!-- Adding image for testing -->
+                <!-- Adding image for testing; this is overwritten by the JS and is just a placeholder -->
                <img id="imagePair" src="{{ static 'BTL/images/batch_1/test_pair_1_batch_1.png' }}" alt="Temporary Image" style="width: 100%; max-width: 600px;">
             </label>
         </div> 
@@ -76,7 +76,7 @@
   </div>
   
 </div>
-
+<!-- JavaScript that loads images, enables ratings, and stores data -->
 <script src="{% static 'BTL/drawing_nomoderation_BTL.js' %}" type="text/javascript"></script>
 
 <script type="text/javascript">
