--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Rating_modification_round_structure.html
@@ -3,11 +3,11 @@
 {% endblock %}
 
 {% block styles %}
-<link rel="stylesheet" href="{{ static 'BTL/experiment_layout.css' }}" type="text/css">
+<link rel="stylesheet" href="{{ static 'similarity/experiment_layout.css' }}" type="text/css">
 {% endblock %}
 
 {% block scripts %}
-<script src="{{ static 'BTL/html2canvas.js' }}" type="text/javascript"></script>
+<script src="{{ static 'similarity/html2canvas.js' }}" type="text/javascript"></script>
 
 <script type="text/javascript">
  document.addEventListener("DOMContentLoaded", function(){
@@ -33,7 +33,7 @@
         <div id="draw">
             <label>
                 <!-- Adding image for testing; this is overwritten by the JS and is just a placeholder -->
-               <img id="imagePair" src="{{ static 'BTL/images/batch_1/test_pair_1_batch_1.png' }}" alt="Temporary Image" style="width: 100%; max-width: 600px;">
+               <img id="imagePair" src="{{ static 'similarity/images/batch_1/test_pair_1_batch_1.png' }}" alt="Temporary Image" style="width: 100%; max-width: 600px;">
             </label>
         </div> 
         
@@ -77,7 +77,7 @@
   
 </div>
 <!-- JavaScript that loads images, enables ratings, and stores data -->
-<script src="{% static 'BTL/drawing_nomoderation_BTL.js' %}" type="text/javascript"></script>
+<script src="{% static 'similarity/drawing_nomoderation_BTL.js' %}" type="text/javascript"></script>
 
 <script type="text/javascript">
 
@@ -94,7 +94,7 @@ let stimList = {};
 
 function getDataSync(index) {
     let request = new XMLHttpRequest();
-    request.open("GET", "/static/BTL/stim_lists/setListJSON_2.JSON", false); // `false` makes it synchronous
+    request.open("GET", "/static/similarity/stim_lists/setListJSON_2.JSON", false); // `false` makes it synchronous
     request.send(null); // Send the request
 
     if (request.status === 200) {
@@ -143,9 +143,9 @@ console.log("roundSetSize", roundSetSize);
 // Function to construct the image URL dynamically
 function getImageUrl(index) {
     let stimIndex = stimList[idInGroup][index-1]; //the 'key' needs to be the idInGroup; the -1 is due to the 0 indexing of JS
-    console.log(`/static/BTL/images/batch_2/test_pair_${stimIndex}_batch_2.png`);
+    console.log(`/static/similarity/images/batch_2/test_pair_${stimIndex}_batch_2.png`);
     console.log('current stim index =', stimIndex)
-    return `/static/BTL/images/batch_2/test_pair_${stimIndex}_batch_2.png`;
+    return `/static/similarity/images/batch_2/test_pair_${stimIndex}_batch_2.png`;
     return stimIndex;
 }
 
