Added R script + changed parameters to a testing version
- Added the R script for generating stimLists and image batches to the repository.
- Changed the parameters of both the otree project __init.py__ and the R script to make a smaller set for testing.

--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
@@ -14,7 +14,7 @@
         After rating each pair using a slider, you can press the <strong>Next</strong> button to proceed to the next trial.
         <br> <!-- could also have examples in the instruction page to make it more clear -->
       </p><p>
-        The experiment contains around 333 image pairs, and your rating task is divided into three sets. Between the sets you will be invited to take longer breaks.
+        The experiment contains around 'n' image pairs, and your rating task is divided into three sets. Between the sets you will be invited to take longer breaks.
         You do not need to spend a lot of time on each rating, but please consider the patterns in detail before you rate.
         <br>
       </p><p>
