Ready for pilot
- Added withinExpectedRating variable for easy reading in Otree (to check attentionchecks)
- Made UI tweaks
- Changed small introduction before the actual experiment begins

--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Goodbye.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Goodbye.html
@@ -1,5 +1,5 @@
 {{ block title }}
-<span style="display: none;">Practice</span>
+<span style="display: none;">Goodbye</span>
 {{ endblock }}
 
 {% block content %}
@@ -11,7 +11,7 @@
 </style>
 
   <p style="text-align: center; font-size: 20px; margin-top: 60 px;"> 
-    {{ "Thank you for taking part in the line drawing experiment!"}} </p>
+    {{ "Thank you for taking part in the experiment!"}} </p>
 
   <br />
   
