--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
@@ -5,21 +5,14 @@
   <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
 	  <div class="card card-body">
       <p>
-        Welcome to the similarity rating experiment!
+        Good job! Now you are ready for the actual experiment.
       </p><p>
-        In this experiment you will be presented with images containing two different line patterns. Your task is to rate how similar you find the two patterns in each image.
+        The experiment contains around 450 drawing pairs, divided into three sets. Between the sets, you will be invited to take longer breaks.
         <br>
-      </p><p>
-        The ratings are made on a scale from 0-100, with 0 indicating complete difference and 100 indicating that the patterns are indentical.
-        After rating each pair using a slider, you can press the <strong>Next</strong> button to proceed to the next trial.
-        <br> <!-- could also have examples in the instruction page to make it more clear -->
-      </p><p>
-        The experiment contains around 'n' image pairs, and your rating task is divided into three sets. Between the sets you will be invited to take longer breaks.
+        <br>
         You do not need to spend a lot of time on each rating, but please consider the patterns in detail before you rate.
-        <br>
       </p><p>
-        Before beginning the experiment, you will be shown different examples of the types of pattern pairs you will be rating. 
-        Click <strong>Next</strong> to continue to the example page.
+        Click <strong>Next</strong> to begin.
         <br>
       </p><p>
     </div>
