Added new stimuli (study 1, 2 and 3)
- Added new stimuli (study 1, 2 and 3)
- Made minor adjustments to the instructions before the actual experiment begins

--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
@@ -5,12 +5,11 @@
   <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
 	  <div class="card card-body">
       <p>
-        Good job! Now you are ready for the actual experiment.
+        <strong>Good job!</strong><br>
+        Now you are ready for the actual experiment.
       </p><p>
-        The experiment contains around 450 drawing pairs, divided into three sets. Between the sets, you will be invited to take longer breaks.
+        The experiment contains around 550 drawing pairs, divided into three sets. Between the sets, you will be invited to take longer breaks.
         <br>
-        <br>
-        You do not need to spend a lot of time on each rating, but please consider the patterns in detail before you rate.
       </p><p>
         Click <strong>Next</strong> to begin.
         <br>
