UI updated + added consent form + updated instructions
- Changed the progress overview to reflect the trial blocks
- Removed the progress bar
- Added consent form
- Changed formulations in the instructions
- Inserted the correct Prolific completion code at the goodbye page
- Fixed minor bugs in the drawing rating flow

--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_1.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_1.html
@@ -15,10 +15,11 @@
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-        We would like to ask you for your consent to participate in the study and for us to treat your data in agreement with data protection legislation. 
+        You are being invited to take part in the research study <i>How similar are these drawings?</i>
+        We would like to ask you for your consent to participate in the study and for us to treat your data in agreement with data protection legislation.
         </p>
         <p>
-        Before you decide to participate in this study, it is important that you understand why the research is being done and what it will involve. 
+        Before you decide to participate in this study, it is important that you understand why the research is being done and what it will involve.
         </p>
         <p>
         Please take the time to read the following information carefully.
