--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_2.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_2.html
@@ -15,13 +15,14 @@
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-        The goal of the project is to investigate cognitive and cultural factors influencing the production of simple line drawings, to inform understandings about the evolution of symbolic behaviour. By comparing drawings across the world, we can map out potential patterns and investigate their universal and cultural tendencies which in turn can inform discussions about the emergence of archaeologically documented line patterns dating to 100,000 - 70,000 years ago.  
+        The overall aim of this project is to advance our understanding of early human cognition and behaviour, between 100,000 – 50,000 years ago. 
         </p>
         <p>
-        The study is part of a larger EU ERC project, eSYMb: The Evolution of Early Symbolic Behaviour, awarded to Professor Kristian Tylén, which integrates insights and methods from cognitive science and archaeology to inform questions about the evolution of symbolic cognition in the Palaeolithic.
+        More specifically, in this study we are interested in examining the perceptual and cognitive properties of a set of drawings that were produced by participants in previous experiments. 
+        This will eventually help us understand concrete collections of archaeological findings, and how they evolved in response to different social and cognitive factors.
         </p>
         <p>
-          Your participation will benefit researchers in the project as well as a general audience from a diverse field interested in studies of human evolution.
+        Findings will be published in international scientific journals and presented at conferences, and we expect them to be of great interest to archaeologists and cognitive scientists interested in cultural evolution. 
         </p>
       </div>
       </div>
