--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_3.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_3.html
@@ -15,7 +15,11 @@
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-          Aarhus University is Data controller for the processing of your personal data. The study group, consisting of Kristian Tylén, Izzy Wisher, and Christian Stenbro, is responsible for the study. 
+          Aarhus University is Data controller for the processing of your personal data. 
+          The study is carried out in the context of a larger research project, The Evolution of Early Symbolic Behavior (eSYMb), supported by an ERC grant awarded to Kristian Tylén. 
+        </p>
+        <p>
+          The responsible investigators are Riccardo Fusaroli (Jens Chr. Skous Vej 2, building 1485, 640; email: fusaroli@cc.au.dk) and Murillo Pagnotta (murillo@cc.au.dk).  
         </p>
       </div>
       </div>
