--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_4.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_4.html
@@ -15,15 +15,13 @@
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-          In this experiment, you will be asked to draw lines on a blank, digital canvas. 
-          The number of lines you will be asked to draw will increase incrementally from 1 to 6 over the experimental trials. 
+          In this experiment, you will be asked to examine pairs of simple line drawings and rate how similar you find them.
         </p>
         <p>
-          The drawing tool is designed in a way where you are free to decide the relative position and orientation of lines while it allows you to only draw straight lines of a particular length and thickness. 
-          Before the task begins, you will have time to familiarise yourself with the drawing tool. 
+          The study consists of approximately 400 trials and is organized into 3 blocks with breaks between the blocks.
         </p>
         <p>
-          More detailed instructions will be provided when the experiment begins. 
+          At the start of the experiment, you will receive further instructions and do a practice round to familiarise yourself with the task and the rating scale.
         </p>
       </div>
       </div>
