--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_5.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_5.html
@@ -15,7 +15,8 @@
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-          There are no conceivable disadvantages or risks involved in the data collection procedures beyond those encountered in normal everyday life. It is, however, possible that you might encounter mild fatigue and/or boredom during the tasks, but you will be compensated for your time. 
+          There are no known disadvantages or risks involved in this study beyond those encountered in normal everyday life. 
+          Your expected earnings for participating in the study are GBP 5. The study is expected to last around 30 min. 
         </p>
       </div>
       </div>
