--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_6.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_6.html
@@ -15,7 +15,12 @@
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-          During the experiment, image files of your line drawings will be collected and anonymized as the main research data. Besides, we collect basic demographic data in the form of age, declared gender, and nationality. Everything regarding compensations for your participation is handled by Prolific.
+          This study collects simple demographic information such as age, declared gender, native language(s), and nationality. 
+          We also collect the Prolific ID to ensure data quality. Personal information used for payment is handled by Prolific and is not otherwise collected. 
+        </p>
+        <p>
+          The main data from the experiments consist in your responses (ratings), which will be included in subsequent statistical analyses. 
+          The data are collected anonymously, and it will not be possible to identify participants based on the data. 
         </p>
       </div>
       </div>
