--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_8.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_8.html
@@ -1,5 +1,5 @@
   {{ block title }}
-<span style="display: none;">Consent_8</span>
+<span style="display: none;">Consent_7</span>
 {{ endblock }}
 
 {% block content %}
@@ -11,19 +11,16 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <h4 class="card-header">Signing consent</h4>
+    <h4 class="card-header">Withdrawal of consent</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-          By clicking the <strong>I give my consent</strong> button, I confirm to have received, read and understood the above information and that:
+          Participation is voluntary and you may withdraw your consent at any time without stating a reason.  
+          If you wish to withdraw consent after starting the experiment, simply leave the experiment without completing. 
         </p>
-        <ol type="A">
-          <li style="margin-bottom: 15px;">My participation is voluntary, and I may withdraw my consent and discontinue participation in the experiment at any time.</li>
-          <li style="margin-bottom: 15px;">By accepting this agreement, I do not waive any legal rights or release Aarhus University, Denmark, its agents, or you from liability for negligence.</li>
-          <li style="margin-bottom: 15px;">I give my consent to participate as a subject in the study as described above.</li>
-        </ol>
         <p>
-          After clicking the button, the experiment will begin after a short introduction.
+          Since the data are anonymised, it should be noted that you can withdraw consent up until you leave the experiment. 
+          Consent cannot be withdrawn thereafter, since links between your id and data will no longer be identifiable. 
         </p>
       </div>
       </div>
@@ -31,15 +28,9 @@
   </div>
 
 <br />
-
-<!--
-<button class="otree-btn-next btn btn-primary" id = "button_consent" type="button" style="width: 30%; margin: 0 auto; display: block;">
-	I give my consent
-  </button>
--->
-  <button class="btn btn-primary" style="width: 30%; margin: 0 auto; display: block;">
-    I give my consent
-  </button>
+<div style="float: right;">
+{{ next_button }}
+</div>
 
 {{ endblock }}
 
