--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Rating_practice.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Rating_practice.html
@@ -84,7 +84,7 @@
         </div>
 
         <!-- Display slider value (hidden) -->    
-        <span id="sliderValue" style="visibility: hidden;"></span>
+        <span id="sliderValue" style="visibility: hidden;">50</span>
 
     </div>
         
