--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Goodbye.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Goodbye.html
@@ -19,7 +19,7 @@
     {{ "Click the link below to return to Prolific and recieve the completion code:" }} </p>
   
   <p style="text-align: center; font-size: 20px; margin-top: 60 px;">
-    <a href="https://app.prolific.com/submissions/complete?cc=CYBOKQWV">
+    <a href="https://app.prolific.com/submissions/complete?cc=C6A2ICO5">
       Return to Prolific
     </a>
   </p>
