--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_7.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_7.html
@@ -11,11 +11,12 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <h4 class="card-header">Withdrawal of consent</h4>
+    <h4 class="card-header">Potential external data processors</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
         <div class="card card-body">
         <p>
-          Participation is voluntary and you may withdraw your consent at any time during the experiment without stating a reason.
+          In the interest of open and transparent science, the anonymized and preprocessed data will be made available to researchers from other institutions via public data repositories (usually OSF.org). 
+          It will not be possible to identify you from any published data. 
         </p>
       </div>
       </div>
