--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_2.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_2.html
@@ -11,15 +11,15 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <p class="card-header" style="padding: 10px;">
-      The drawings in each pair will always be relatively similar. <br>
-      So, before you start rating, we will show you the range of variation you should expect. <br>
-      In this way, you will be able to use the full range of the slider.
-    </p>
+  <h4 class="card-header">Instructions</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
-
       <div class="card card-body">
         
+        <p>
+          To help you use the full range of the scale (from LOW to HIGH), we will give you an idea of the range of variation you should expect. 
+          Consider the following illustrative examples.
+        </p>
+
         <!--list formatting-->
 
         <div id="draw" style="display: flex; justify-content: center; margin-bottom: 10px; margin-top: 15px;">
@@ -43,11 +43,11 @@
           </ul>
 
         </div> 
-       
+
       </div>
 
       <footer class="card-footer" style="display: flex; justify-content: flex-end; padding: 10px;">
-        Click&nbsp;<strong>Next</strong>&nbsp;to proceed with the instructions.
+        Click&nbsp;<strong>Next</strong>&nbsp;to proceed.
       </footer>
 
     </div>
