--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_3.html
@@ -11,13 +11,15 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <p class="card-header" style="padding: 10px;">
-      Here are further examples:
-    </p>
+  <h4 class="card-header">Instructions</h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
 
       <div class="card card-body">
         
+        <p>
+          Here are further examples:
+        </p>
+
         <!--list formatting-->
 
         <div id="draw" style="display: flex; justify-content: center; margin-bottom: 10px; margin-top: 15px;">
@@ -45,7 +47,7 @@
       </div>
 
       <footer class="card-footer" style="display: flex; justify-content: flex-end; padding: 10px;">
-        Click&nbsp;<strong>Next</strong>&nbsp;to proceed with the instructions.
+        Click&nbsp;<strong>Next</strong>&nbsp;to proceed.
       </footer>
 
     </div>
