--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_4.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Instruction_4.html
@@ -11,23 +11,34 @@
 </style>
 
 <div class="card instructions panel panel-default">
-    <h5 class="card-header" style="padding: 10px;">
+    <h4 class="card-header" style="padding: 10px;">
       Practice round
-    </h5>
+    </h4>
     <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
 
       <div class="card card-body">
-        <p>Before we begin with the experiment, you will go through a practice round to familiarise yourself with the interface.</p>
         <p>
-          You will see a pair of drawings. <br>
-          Examine the drawings for a few seconds and decide how similar you find them.  
+          Before we begin with the experiment, you will go through a practice round. 
         </p>
         <p>
-          To indicate your response, click and drag the slider below the drawings. <br>
-          The rating scale ranges from <strong>not very similar</strong> to <strong>very similar</strong>. <br>
+          On the next page you will see a pair of drawings. 
         </p>
+        <ul>
+          <li>
+            Take a moment to examine the drawings before deciding how similar you find them. 
+            You don’t need to think too much about it—just go with your impression or ‘gut feeling’. 
+          </li>
+          <li>
+            To indicate your response, click and drag the slider below the drawings. 
+          </li>
+          <li>
+            When you are ready to continue, click the ‘Next’ button or hit ‘Enter’ in your keyboard. 
+          </li>
+        </ul>
 
-        <p>Click <strong>Next</strong> to proceed to the practice round.</p>
+        <p>
+          Click <strong>Next</strong> to proceed to the practice round.
+        </p>
         
       </div>
 
