Updated the instruction before the actual rating task

--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
@@ -7,13 +7,15 @@
       <p>
         <strong>Good job!</strong><br>
         Now you are ready for the actual experiment.
-      </p><p>
-        The experiment contains around 550 drawing pairs, divided into three sets. Between the sets, you will be invited to take longer breaks.
-        <br>
-      </p><p>
+      </p>
+      <p>
+        The experiment contains around 400 drawings to rate, divided into three blocks.<br>
+        Between the blocks, you will be invited to take breaks.
+      </p>
+      <p>
         Click <strong>Next</strong> to begin.
         <br>
-      </p><p>
+      </p>
     </div>
 	</div>
   </div>
