Update: Added RT record mechanism + dynamic instructions
Changes:
- Added a RT system using the performance.now() function built into JS
- The system uses MutationObserver to detect when the very first image is displayed
- Made instructions above drawings dynamic, to indicate if a drawing is an attention check
- General clean-ups and restructuring
- Fixed a bug that made the progress text appear before the first image was displayed

Bugs:
- The image display panel moves on the page when the instruction panel is larger. It would be nice to fix the elements using some kind of grid system.

--- a/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
+++ b/eSYMb_similarity_rating_project/SimilarityRatingExperiment/Instructions.html
@@ -1,11 +1,11 @@
 
 
 <div class="card instructions panel panel-default">
+  <h4 class="card-header">Good job!</h4>
   <!--<h4 class="card-header">Instructions<button class="btn btn-link" type="button" data-bs-toggle="collapse" data-bs-target="#instructionsbody" aria-expanded="false">Click for instructions </button></h4>-->
   <div class="collapse{{ instructions_hidden }}" id="instructionsbody">
 	  <div class="card card-body">
       <p>
-        <strong>Good job!</strong><br>
         Now you are ready for the actual experiment.
       </p>
       <p>
