Updated consent form
- Updated formulation in the consent form, page 9

--- a/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_9.html
+++ b/eSYMb_similarity_rating_project/SimilarityIntroduction/Consent_9.html
@@ -18,7 +18,7 @@
           By clicking the <strong>I give my consent</strong> button, I confirm to have received, read and understood the above information and that:
         </p>
         <ol type="A">
-          <li style="margin-bottom: 15px;">My participation is voluntary, and I may withdraw my consent and discontinue participation in the project at any time as specified on the previous page. My refusal to participate will not result in any penalty.</li>
+          <li style="margin-bottom: 15px;">My participation is voluntary, and I may withdraw my consent and discontinue participation in the project at any time by leaving the experiment without completing it. My refusal to participate will not result in any penalty. </li>
           <li style="margin-bottom: 15px;">By signing this agreement, I do not waive any legal rights or release Aarhus University or its agents from liability for negligence. </li>
           <li style="margin-bottom: 15px;">I give my consent to treat my data and to participate as a subject in the study as described above.</li>
         </ol>
